Added (temporary) company logo in slider

--- a/css/icon.css
+++ b/css/icon.css
@@ -3,7 +3,7 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url(Icon-Font.woff2) format('woff2');
+  src: url(../fonts/icon/Icon-Font.woff2) format('woff2');
 }
 
 .material-icons {
